# dynamicC

./: .gitignore  CMakeLists.txt  README.md
include/: .list.h.swp  array.h  data.h  list.h
src/: array.c  array.h  data.h  list.c  list.h  math_util.h
test/: test_main.cc
test/array/: array_test.h
